# motion-capture

./: .gitignore  CMakeLists.txt  main.cpp  qtquickcontrols2.conf
qml/: BodyMeasurements.qml  Main.qml  SensorCoordinates.qml  SensorsModel.qml  SensorsPage.qml  TabPage.qml
qml/sensors/: SensorPowerButton.qml
src/: bodymeasurement.cpp  bodymeasurement.h  motioncapturesystem.h  xsenscontroller.cpp  xsenscontroller.h
src/xsens/: hardware.cpp  hardware.h  license.cpp  license.h  sensorhub.cpp  sensorhub.h  utils.cpp  utils.h  xsenssystem.cpp  xsenssystem.h
src/xsens/sensors/: sensor.cpp  sensor.h  sensorhub.cpp  sensorhub.h  sensors.cpp  sensors.h
